--- a/.travis.yml
+++ b/.travis.yml
@@ -39,3 +39,4 @@ script:
   # Unit tests
   - (mkdir test/build && cd test/build && cmake .. -G"${CMAKE_GENERATOR}")
   - cmake --build test/build --target check
+  - (cd test/build && ctest --output-on-failure)
