Use metabench_add_benchmark instead of add_benchmark

--- a/test/ctest_target/CMakeLists.txt
+++ b/test/ctest_target/CMakeLists.txt
@@ -10,4 +10,4 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 
 enable_testing()
 include(metabench)
-add_benchmark(check "benchmark")
+metabench_add_benchmark(check "benchmark")
