--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,12 @@ os: linux
 sudo: false
 compiler: clang
 
+# Do not build branches of the form "pr/*". By prefixing pull requests coming
+# from branches inside the repository with pr/, this avoids building both the
+# branch push _and_ the pull request.
+branches:
+  except: /pr\/.*/
+
 addons:
   apt:
     packages: ninja-build
