--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ script:
 
   # Run the unit tests
   - |
-    for dir in test/absolute_paths test/ctest_target; do
+    for dir in test/absolute_paths test/ctest_target test/local_header; do
       mkdir ${dir}/build
       (cd ${dir}/build && cmake .. -G"${CMAKE_GENERATOR}")
       cmake --build ${dir}/build --target check
