--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@
 language: c++
 os: linux
 sudo: false
-compiler: clang
+compiler:
+  - clang
+  - gcc
 
 # Do not build branches of the form "pr/*". By prefixing pull requests coming
 # from branches inside the repository with pr/, this avoids building both the
