--- a/test/local_header/CMakeLists.txt
+++ b/test/local_header/CMakeLists.txt
@@ -7,4 +7,4 @@
 cmake_minimum_required(VERSION 3.1)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 include(metabench)
-metabench_add_benchmark(check "${CMAKE_CURRENT_SOURCE_DIR}/benchmark")
+metabench_add_benchmark(check "benchmark")
