Add another example, and get rid of some code that belongs to the tests
Also, explain some things that were shown in the old example in the
tutorial. This is more explicit and does not require users to look
at the example to know.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -10,4 +10,7 @@ include(metabench)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-metabench_add_benchmark(path.to.benchmark "path/to/benchmark")
+metabench_add_benchmark(decay decay)
+metabench_add_benchmark(make_tuple make_tuple)
+
+add_custom_target(benchmarks ALL DEPENDS decay make_tuple)
