--- a/test/absolute_paths/CMakeLists.txt
+++ b/test/absolute_paths/CMakeLists.txt
@@ -8,5 +8,5 @@ cmake_minimum_required(VERSION 3.1)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 include(metabench)
 
-metabench_add_dataset(dummy "${CMAKE_CURRENT_SOURCE_DIR}/benchmark/dummy.cpp.erb" "[1, 2, 3]" "{}")
+metabench_add_dataset(dummy "${CMAKE_CURRENT_SOURCE_DIR}/benchmark/dummy.cpp.erb" "[1, 2, 3]")
 metabench_add_benchmark(check dummy)
