--- a/test/nested_directories/CMakeLists.txt
+++ b/test/nested_directories/CMakeLists.txt
@@ -10,5 +10,5 @@ cmake_minimum_required(VERSION 3.1)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 include(metabench)
 
-metabench_add_dataset(dummy path/to/benchmark/dummy.cpp.erb "[1, 2, 3]" "{}")
+metabench_add_dataset(dummy path/to/benchmark/dummy.cpp.erb "[1, 2, 3]")
 metabench_add_benchmark(check dummy)
