add back the possibility of configuring charts

--- a/test/absolute_paths/CMakeLists.txt
+++ b/test/absolute_paths/CMakeLists.txt
@@ -9,4 +9,4 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 include(metabench)
 
 metabench_add_dataset(dummy "${CMAKE_CURRENT_SOURCE_DIR}/benchmark/dummy.cpp.erb" "[1, 2, 3]")
-metabench_add_benchmark(check dummy)
+metabench_add_benchmark(check DATASETS dummy)
