--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -12,8 +12,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 metabench_add_dataset(std_tuple make_tuple/std_tuple.cpp.erb "(0...50).step(5)")
 metabench_add_dataset(recursive_tuple make_tuple/recursive_tuple.cpp.erb "(0...50).step(5)")
-metabench_add_benchmark(make_tuple std_tuple recursive_tuple)
+metabench_add_benchmark(make_tuple DATASETS std_tuple recursive_tuple CHART make_tuple/chart.json)
 
 metabench_add_dataset(std_decay decay/std_decay.cpp.erb "(0...500).step(100)")
 metabench_add_dataset(my_decay decay/my_decay.cpp.erb "(0...500).step(100)")
-metabench_add_benchmark(decay std_decay my_decay)
+metabench_add_benchmark(decay DATASETS std_decay my_decay CHART decay/chart.json)
