--- a/test/n/CMakeLists.txt
+++ b/test/n/CMakeLists.txt
@@ -10,5 +10,5 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 include(metabench)
 
 metabench_add_dataset(dummy benchmark/dummy.cpp.erb "[1, 2, 3, 4]")
-metabench_add_benchmark(check dummy)
+metabench_add_benchmark(check DATASETS dummy)
 
