--- a/test/nested_directories/CMakeLists.txt
+++ b/test/nested_directories/CMakeLists.txt
@@ -11,4 +11,4 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 include(metabench)
 
 metabench_add_dataset(dummy path/to/benchmark/dummy.cpp.erb "[1, 2, 3]")
-metabench_add_benchmark(check dummy)
+metabench_add_benchmark(check DATASETS dummy)
