Flatten the benchmarks in the unit tests
Having each benchmark in its own directory used to be mandatory, but it
is not anymore. Also, adding a dataset in a nested directory is already
tested on its own.

--- a/test/n/CMakeLists.txt
+++ b/test/n/CMakeLists.txt
@@ -9,6 +9,6 @@ cmake_minimum_required(VERSION 3.1)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 include(metabench)
 
-metabench_add_dataset(dummy benchmark/dummy.cpp.erb "[1, 2, 3, 4]")
+metabench_add_dataset(dummy dummy.cpp.erb "[1, 2, 3, 4]")
 metabench_add_benchmark(check DATASETS dummy)
 
