--- a/test/dataset_properties/CMakeLists.txt
+++ b/test/dataset_properties/CMakeLists.txt
@@ -9,8 +9,8 @@ cmake_minimum_required(VERSION 3.1)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 include(metabench)
 
-metabench_add_dataset(dummy1 benchmark/dummy1.cpp.erb "[1, 2, 3]")
-metabench_add_dataset(dummy2 benchmark/dummy2.cpp.erb "[1, 2, 3]")
+metabench_add_dataset(dummy1 dummy1.cpp.erb "[1, 2, 3]")
+metabench_add_dataset(dummy2 dummy2.cpp.erb "[1, 2, 3]")
 metabench_add_benchmark(check DATASETS dummy1 dummy2)
 
 target_compile_definitions(dummy1 PUBLIC -DCUSTOM_DEFINITION_DUMMY1=1234)
