--- a/test/we_generate_charts/CMakeLists.txt
+++ b/test/we_generate_charts/CMakeLists.txt
@@ -9,8 +9,8 @@ cmake_minimum_required(VERSION 3.1)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 include(metabench)
 
-metabench_add_dataset(dummy benchmark/dummy.cpp.erb "[1, 2, 3]" "{}")
-metabench_add_benchmark(check DATASETS dummy CHART benchmark/chart.json)
+metabench_add_dataset(dummy dummy.cpp.erb "[1, 2, 3]" "{}")
+metabench_add_benchmark(check DATASETS dummy CHART chart.json)
 
 enable_testing()
 
