--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,8 @@ install:
   - mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
   - export PATH=${DEPS_DIR}/cmake/bin:${PATH}
 
-  # Install and use a more recent Ruby and install the gems for the benchmarks
+  # Install and use a more recent Ruby
   - rvm use 2.1 --install --binary --fuzzy
-  - gem install ruby-progressbar
 
 script:
   - cd ${TRAVIS_BUILD_DIR}
