Add an example of heterogeneous sequences

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -21,6 +21,11 @@ if (Meta_FOUND)
     include_directories(${Meta_INCLUDE_DIR})
 endif()
 
+find_package(Hana)
+if (Hana_FOUND)
+    include_directories(${Hana_INCLUDE_DIRS})
+endif()
+
 # find_package(Metal)
 # if (Metal_FOUND)
 #     include_directories(${Metal_INCLUDE_DIR})
@@ -34,13 +39,24 @@ endif()
 function(dependencies_are_satisfied result dataset)
     if(${dataset} MATCHES "brigand\\.")
         set(${result} OFF PARENT_SCOPE)
+    elseif(${dataset} MATCHES "fusion\\.")
+        set(${result} ${Boost_FOUND} PARENT_SCOPE)
+    elseif(${dataset} MATCHES "hana\\.")
+        set(${result} ${Hana_FOUND} PARENT_SCOPE)
     elseif(${dataset} MATCHES "meta\\.")
         set(${result} ${Meta_FOUND} PARENT_SCOPE)
     elseif(${dataset} MATCHES "metal\\.")
         set(${result} OFF PARENT_SCOPE)
     elseif (${dataset} MATCHES "mpl\\.")
         set(${result} ${Boost_FOUND} PARENT_SCOPE)
+    elseif (${dataset} MATCHES "std\\.")
+        set(${result} ON PARENT_SCOPE) # std:: is always available
+    else()
+        message(FATAL_ERROR
+            "The dataset named '${dataset}' does not appear to benchmark any "
+            "known metaprogramming library.")
     endif()
 endfunction()
 
+add_subdirectory(hetero/at)
 add_subdirectory(type/at)
