Make sure Metal is supported

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -26,10 +26,10 @@ if (Hana_FOUND)
     include_directories(${Hana_INCLUDE_DIRS})
 endif()
 
-# find_package(Metal)
-# if (Metal_FOUND)
-#     include_directories(${Metal_INCLUDE_DIR})
-# endif()
+find_package(Metal)
+if (Metal_FOUND)
+    include_directories(${METAL_INCLUDE_DIRS})
+endif()
 
 # find_package(Brigand)
 # if (Brigand_FOUND)
@@ -46,7 +46,7 @@ function(dependencies_are_satisfied result dataset)
     elseif(${dataset} MATCHES "meta\\.")
         set(${result} ${Meta_FOUND} PARENT_SCOPE)
     elseif(${dataset} MATCHES "metal\\.")
-        set(${result} OFF PARENT_SCOPE)
+        set(${result} ${Metal_FOUND} PARENT_SCOPE)
     elseif (${dataset} MATCHES "mpl\\.")
         set(${result} ${Boost_FOUND} PARENT_SCOPE)
     elseif (${dataset} MATCHES "std\\.")
