--- a/benchmark/type/at/CMakeLists.txt
+++ b/benchmark/type/at/CMakeLists.txt
@@ -10,8 +10,8 @@ foreach(dataset brigand.list meta.list metal.list mpl.list mpl.vector)
     dependencies_are_satisfied(satisfied ${dataset})
 
     if (${satisfied})
-        metabench_add_dataset(${dataset} ${dataset}.cpp.erb "(1..20).step(2)")
-        list(APPEND datasets ${dataset})
+        metabench_add_dataset(dataset.type.at.${dataset} ${dataset}.cpp.erb "(1..20).step(2)")
+        list(APPEND datasets dataset.type.at.${dataset})
     endif()
 endforeach()
 
