Import transform benchmarks from Hana

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -60,5 +60,7 @@ endfunction()
 
 add_subdirectory(hetero/at)
 add_subdirectory(hetero/make)
+add_subdirectory(hetero/transform)
 
 add_subdirectory(type/at)
+add_subdirectory(type/transform)
