--- a/benchmark/type/transform/CMakeLists.txt
+++ b/benchmark/type/transform/CMakeLists.txt
@@ -2,17 +2,17 @@
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(datasets)
-foreach(dataset brigand.list hana.types meta.list metal.list mpl.list mpl.vector)
+foreach(dataset hana.types mpl.list mpl.vector)
     dependencies_are_satisfied(satisfied ${dataset})
 
     if (${satisfied})
-        metabench_add_dataset(dataset.type.at.${dataset} ${dataset}.cpp.erb "(1..20).step(2)")
-        list(APPEND datasets dataset.type.at.${dataset})
+        metabench_add_dataset(dataset.type.transform.${dataset} ${dataset}.cpp.erb "(1..20).step(2)")
+        list(APPEND datasets dataset.type.transform.${dataset})
     endif()
 endforeach()
 
-metabench_add_benchmark(benchmark.type.at DATASETS ${datasets})
+metabench_add_benchmark(benchmark.type.transform DATASETS ${datasets})
