--- a/benchmark/hetero/at/CMakeLists.txt
+++ b/benchmark/hetero/at/CMakeLists.txt
@@ -9,8 +9,16 @@ set(datasets)
 foreach(dataset fusion.list fusion.vector hana.basic_tuple hana.tuple std.tuple)
     dependencies_are_satisfied(satisfied ${dataset})
 
+    if (${dataset} MATCHES "fusion\\.")
+        set(env "(1..50).step(2)")
+    elseif(${dataset} MATCHES "std\\.")
+        set(env "(1..100).step(10)")
+    else()
+        set(env "(1..500).step(10)")
+    endif()
+
     if (${satisfied})
-        metabench_add_dataset(dataset.hetero.at.${dataset} ${dataset}.cpp.erb "(1..10)")
+        metabench_add_dataset(dataset.hetero.at.${dataset} ${dataset}.cpp.erb ${env})
         list(APPEND datasets dataset.hetero.at.${dataset})
     endif()
 endforeach()
