--- a/benchmark/type/transform/CMakeLists.txt
+++ b/benchmark/type/transform/CMakeLists.txt
@@ -9,8 +9,14 @@ set(datasets)
 foreach(dataset hana.types mpl.list mpl.vector)
     dependencies_are_satisfied(satisfied ${dataset})
 
+    if (${dataset} MATCHES "mpl\\.")
+        set(env "(1..20).step(2)")
+    else()
+        set(env "(1..500).step(10)")
+    endif()
+
     if (${satisfied})
-        metabench_add_dataset(dataset.type.transform.${dataset} ${dataset}.cpp.erb "(1..20).step(2)")
+        metabench_add_dataset(dataset.type.transform.${dataset} ${dataset}.cpp.erb ${env})
         list(APPEND datasets dataset.type.transform.${dataset})
     endif()
 endforeach()
