--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -30,12 +30,12 @@ if (METABENCH_BRIGAND)
             GIT_REPOSITORY https://github.com/edouarda/brigand
             GIT_TAG origin/master
             TIMEOUT 10
-            CMAKE_ARGS -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
             PREFIX "${CMAKE_CURRENT_BINARY_DIR}"
-            BUILD_COMMAND ""   # Disable build step
-            INSTALL_COMMAND "" # Disable install step
-            TEST_COMMAND ""    # Disable test step
-            UPDATE_COMMAND ""  # Disable source work-tree update
+            CONFIGURE_COMMAND "" # Disable configure step
+            BUILD_COMMAND ""     # Disable build step
+            INSTALL_COMMAND ""   # Disable install step
+            TEST_COMMAND ""      # Disable test step
+            UPDATE_COMMAND ""    # Disable source work-tree update
         )
         ExternalProject_Get_Property(Brigand SOURCE_DIR)
         include_directories(${SOURCE_DIR})
@@ -54,12 +54,12 @@ if (METABENCH_HANA)
             GIT_REPOSITORY https://github.com/ldionne/hana
             GIT_TAG origin/develop
             TIMEOUT 10
-            CMAKE_ARGS -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
             PREFIX "${CMAKE_CURRENT_BINARY_DIR}"
-            BUILD_COMMAND ""   # Disable build step
-            INSTALL_COMMAND "" # Disable install step
-            TEST_COMMAND ""    # Disable test step
-            UPDATE_COMMAND ""  # Disable source work-tree update
+            CONFIGURE_COMMAND "" # Disable configure step
+            BUILD_COMMAND ""     # Disable build step
+            INSTALL_COMMAND ""   # Disable install step
+            TEST_COMMAND ""      # Disable test step
+            UPDATE_COMMAND ""    # Disable source work-tree update
         )
         ExternalProject_Get_Property(Hana SOURCE_DIR)
         include_directories(${SOURCE_DIR}/include)
@@ -78,12 +78,12 @@ if (METABENCH_META)
             GIT_REPOSITORY https://github.com/ericniebler/meta
             GIT_TAG origin/master
             TIMEOUT 10
-            CMAKE_ARGS -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
             PREFIX "${CMAKE_CURRENT_BINARY_DIR}"
-            BUILD_COMMAND ""   # Disable build step
-            INSTALL_COMMAND "" # Disable install step
-            TEST_COMMAND ""    # Disable test step
-            UPDATE_COMMAND ""  # Disable source work-tree update
+            CONFIGURE_COMMAND "" # Disable configure step
+            BUILD_COMMAND ""     # Disable build step
+            INSTALL_COMMAND ""   # Disable install step
+            TEST_COMMAND ""      # Disable test step
+            UPDATE_COMMAND ""    # Disable source work-tree update
         )
         ExternalProject_Get_Property(Meta SOURCE_DIR)
         include_directories(${SOURCE_DIR}/include)
@@ -102,12 +102,12 @@ if (METABENCH_METAL)
             GIT_REPOSITORY https://github.com/brunocodutra/metal
             GIT_TAG origin/master
             TIMEOUT 10
-            CMAKE_ARGS -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
             PREFIX "${CMAKE_CURRENT_BINARY_DIR}"
-            BUILD_COMMAND ""   # Disable build step
-            INSTALL_COMMAND "" # Disable install step
-            TEST_COMMAND ""    # Disable test step
-            UPDATE_COMMAND ""  # Disable source work-tree update
+            CONFIGURE_COMMAND "" # Disable configure step
+            BUILD_COMMAND ""     # Disable build step
+            INSTALL_COMMAND ""   # Disable install step
+            TEST_COMMAND ""      # Disable test step
+            UPDATE_COMMAND ""    # Disable source work-tree update
         )
         ExternalProject_Get_Property(Metal SOURCE_DIR)
         include_directories(${SOURCE_DIR}/include)
