[benchmarks] Reduce code duplication when defining benchmarks
Also, the proper library is now fetched automatically when a dataset
that requires it is gathered.

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -116,28 +116,42 @@ if (METABENCH_METAL)
     endif()
 endif()
 
-function(dependencies_are_satisfied result dataset)
+macro(add_dataset datasets dataset path_to_template range)
+    set(_supported OFF)
     if(${dataset} MATCHES "brigand\\.")
-        set(${result} ${METABENCH_BRIGAND} PARENT_SCOPE)
+        set(_supported ${METABENCH_BRIGAND})
+        set(_dependency Brigand)
     elseif(${dataset} MATCHES "fusion\\.")
-        set(${result} ${METABENCH_FUSION} PARENT_SCOPE)
+        set(_supported ${METABENCH_FUSION})
     elseif(${dataset} MATCHES "hana\\.")
-        set(${result} ${METABENCH_HANA} PARENT_SCOPE)
+        set(_supported ${METABENCH_HANA})
+        set(_dependency Hana)
     elseif(${dataset} MATCHES "meta\\.")
-        set(${result} ${METABENCH_META} PARENT_SCOPE)
+        set(_supported ${METABENCH_META})
+        set(_dependency Meta)
     elseif(${dataset} MATCHES "metal\\.")
-        set(${result} ${METABENCH_METAL} PARENT_SCOPE)
+        set(_supported ${METABENCH_METAL})
+        set(_dependency Metal)
     elseif (${dataset} MATCHES "mpl\\.")
-        set(${result} ${METABENCH_MPL} PARENT_SCOPE)
+        set(_supported ${METABENCH_MPL})
     elseif (${dataset} MATCHES "std\\.")
-        set(${result} ON PARENT_SCOPE) # std:: is always available
+        set(_supported ON) # std:: is always available
     else()
         message(FATAL_ERROR
             "The dataset named '${dataset}' does not appear to benchmark any "
             "known metaprogramming library."
         )
     endif()
-endfunction()
+
+    if (${_supported})
+        metabench_add_dataset(${dataset} ${path_to_template} ${range})
+        list(APPEND ${datasets} ${dataset})
+        if (_dependency)
+            add_dependencies(${dataset} ${_dependency})
+            unset(_dependency)
+        endif()
+    endif()
+endmacro()
 
 set(cxx_flag -ftemplate-depth=5000)
 check_cxx_compiler_flag(${cxx_flag} HAS_FTEMPLATE_DEPTH)
