--- a/benchmark/hetero/transform/CMakeLists.txt
+++ b/benchmark/hetero/transform/CMakeLists.txt
@@ -6,20 +6,10 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(datasets)
-foreach(dataset fusion.list fusion.vector hana.basic_tuple hana.tuple)
-    dependencies_are_satisfied(satisfied ${dataset})
-
-    if (${dataset} MATCHES "fusion\\.")
-        set(env "(1..50).step(2)")
-    else()
-        set(env "(1..500).step(10)")
-    endif()
-
-    if (${satisfied})
-        metabench_add_dataset(dataset.hetero.transform.${dataset} ${dataset}.cpp.erb ${env})
-        list(APPEND datasets dataset.hetero.transform.${dataset})
-    endif()
-endforeach()
+add_dataset(datasets dataset.hetero.transform.fusion.list      fusion.list.cpp.erb        "(1..50).step(2)")
+add_dataset(datasets dataset.hetero.transform.fusion.vector    fusion.vector.cpp.erb      "(1..50).step(2)")
+add_dataset(datasets dataset.hetero.transform.hana.basic_tuple hana.basic_tuple.cpp.erb   "(1..500).step(10)")
+add_dataset(datasets dataset.hetero.transform.hana.tuple       hana.tuple.cpp.erb         "(1..500).step(10)")
 
 metabench_add_benchmark(benchmark.hetero.transform DATASETS ${datasets})
 add_dependencies(benchmarks benchmark.hetero.transform)
