--- a/benchmark/type/at/CMakeLists.txt
+++ b/benchmark/type/at/CMakeLists.txt
@@ -6,20 +6,12 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(datasets)
-foreach(dataset brigand.list hana.types meta.list metal.list mpl.list mpl.vector)
-    dependencies_are_satisfied(satisfied ${dataset})
-
-    if (${dataset} MATCHES "mpl\\.")
-        set(env "(1..20).step(2)")
-    else()
-        set(env "(1..500).step(10)")
-    endif()
-
-    if (${satisfied})
-        metabench_add_dataset(dataset.type.at.${dataset} ${dataset}.cpp.erb ${env})
-        list(APPEND datasets dataset.type.at.${dataset})
-    endif()
-endforeach()
+add_dataset(datasets dataset.type.at.brigand.list   brigand.list.cpp.erb    "(1..500).step(10)")
+add_dataset(datasets dataset.type.at.hana.types     hana.types.cpp.erb      "(1..500).step(10)")
+add_dataset(datasets dataset.type.at.meta.list      meta.list.cpp.erb       "(1..500).step(10)")
+add_dataset(datasets dataset.type.at.metal.list     metal.list.cpp.erb      "(1..500).step(10)")
+add_dataset(datasets dataset.type.at.mpl.list       mpl.list.cpp.erb        "(1..20).step(2)")
+add_dataset(datasets dataset.type.at.mpl.vector     mpl.vector.cpp.erb      "(1..20).step(2)")
 
 metabench_add_benchmark(benchmark.type.at DATASETS ${datasets})
 add_dependencies(benchmarks benchmark.type.at)
