--- a/benchmark/hetero/make/CMakeLists.txt
+++ b/benchmark/hetero/make/CMakeLists.txt
@@ -6,22 +6,11 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(datasets)
-foreach(dataset fusion.list fusion.vector hana.basic_tuple hana.tuple std.tuple)
-    dependencies_are_satisfied(satisfied ${dataset})
-
-    if (${dataset} MATCHES "fusion\\.")
-        set(env "(1..50).step(2)")
-    elseif(${dataset} MATCHES "std\\.")
-        set(env "(1..100).step(10)")
-    else()
-        set(env "(1..500).step(10)")
-    endif()
-
-    if (${satisfied})
-        metabench_add_dataset(dataset.hetero.make.${dataset} ${dataset}.cpp.erb ${env})
-        list(APPEND datasets dataset.hetero.make.${dataset})
-    endif()
-endforeach()
+add_dataset(datasets dataset.hetero.make.fusion.list      fusion.list.cpp.erb         "(1..50).step(2)")
+add_dataset(datasets dataset.hetero.make.fusion.vector    fusion.vector.cpp.erb       "(1..50).step(2)")
+add_dataset(datasets dataset.hetero.make.hana.basic_tuple hana.basic_tuple.cpp.erb    "(1..500).step(10)")
+add_dataset(datasets dataset.hetero.make.hana.tuple       hana.tuple.cpp.erb          "(1..500).step(10)")
+add_dataset(datasets dataset.hetero.make.std.tuple        std.tuple.cpp.erb           "(1..100).step(10)")
 
 metabench_add_benchmark(benchmark.hetero.make DATASETS ${datasets})
 add_dependencies(benchmarks benchmark.hetero.make)
