--- a/benchmark/type/reverse/CMakeLists.txt
+++ b/benchmark/type/reverse/CMakeLists.txt
@@ -6,20 +6,9 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(datasets)
-foreach(dataset metal.list mpl.list mpl.vector)
-    dependencies_are_satisfied(satisfied ${dataset})
-
-    if (${dataset} MATCHES "mpl\\.")
-        set(env "(1..20).step(2)")
-    else()
-        set(env "(1..500).step(10)")
-    endif()
-
-    if (${satisfied})
-        metabench_add_dataset(dataset.type.reverse.${dataset} ${dataset}.cpp.erb ${env})
-        list(APPEND datasets dataset.type.reverse.${dataset})
-    endif()
-endforeach()
+add_dataset(datasets dataset.type.reverse.metal.list    metal.list.cpp.erb  "(1..500).step(10)")
+add_dataset(datasets dataset.type.reverse.mpl.list      mpl.list.cpp.erb    "(1..20).step(2)")
+add_dataset(datasets dataset.type.reverse.mpl.vector    mpl.vector.cpp.erb  "(1..20).step(2)")
 
 metabench_add_benchmark(benchmark.type.reverse DATASETS ${datasets})
 add_dependencies(benchmarks benchmark.type.reverse)
