fix bug which caused _dependency to not be unset when a library was disabled
- rename _supported to _enabled so as to make its meaning clearer

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -117,25 +117,26 @@ if (METABENCH_METAL)
 endif()
 
 macro(add_dataset datasets dataset path_to_template range)
-    set(_supported OFF)
+    set(_enabled OFF)
+    unset(_dependency)
     if(${dataset} MATCHES "brigand\\.")
-        set(_supported ${METABENCH_BRIGAND})
+        set(_enabled ${METABENCH_BRIGAND})
         set(_dependency Brigand)
     elseif(${dataset} MATCHES "fusion\\.")
-        set(_supported ${METABENCH_FUSION})
+        set(_enabled ${METABENCH_FUSION})
     elseif(${dataset} MATCHES "hana\\.")
-        set(_supported ${METABENCH_HANA})
+        set(_enabled ${METABENCH_HANA})
         set(_dependency Hana)
     elseif(${dataset} MATCHES "meta\\.")
-        set(_supported ${METABENCH_META})
+        set(_enabled ${METABENCH_META})
         set(_dependency Meta)
     elseif(${dataset} MATCHES "metal\\.")
-        set(_supported ${METABENCH_METAL})
+        set(_enabled ${METABENCH_METAL})
         set(_dependency Metal)
     elseif (${dataset} MATCHES "mpl\\.")
-        set(_supported ${METABENCH_MPL})
+        set(_enabled ${METABENCH_MPL})
     elseif (${dataset} MATCHES "std\\.")
-        set(_supported ON) # std:: is always available
+        set(_enabled ON) # std:: is always available
     else()
         message(FATAL_ERROR
             "The dataset named '${dataset}' does not appear to benchmark any "
@@ -143,13 +144,12 @@ macro(add_dataset datasets dataset path_to_template range)
         )
     endif()
 
-    if (${_supported})
+    if (_enabled)
         string(REGEX REPLACE "[^.]+[.][^.]+[.][^.]+[.](.*)" "\\1" name ${dataset})
         metabench_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name})
         list(APPEND ${datasets} ${dataset})
         if (_dependency)
             add_dependencies(${dataset} ${_dependency})
-            unset(_dependency)
         endif()
     endif()
 endmacro()
